thumbnail: Add debug when loading an image file fails

https://bugzilla.gnome.org/show_bug.cgi?id=787249